@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.916 2008-06-10 16:29:07 castaglia Exp $
+$Id: NEWS,v 1.917 2008-06-18 17:29:34 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -18,6 +18,8 @@ CVS
   Hopefully the "DEFAULT" keyword will be more accurate, more descriptive
   of the actual functionality triggered by the keyword.
 - Bug 3083 - Multiple issues with handling of <Class> definitions.
+- Bug 3077 - Transparently handle the X-variant commands when checking
+  <Limit> permissions.
 
 1.3.2rc1 - Released 15-Apr-2008
 --------------------------------
